Se modifica el archivo login con los datos requeridos

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,5 @@
+<h1>Kevin Alexander Chocojay Rosales</h1>
+<h2>202000361</h2>
 <p-card header="Login"
   [style]="{'width': '410px', 'margin-left': '39%', 'margin-top': '250px', 'background-color': 'gainsboro'}"
   styleClass="ui-card-shadow">
